--- a/Memoria/Memoria.tex
+++ b/Memoria/Memoria.tex
@@ -127,7 +127,7 @@ Finalmente llegamos a la conclusión de que:
 
 \begin{adjustwidth}{2cm}{2cm}
 \vspace{15pt}
-  Tiempo de CPU = IC · ( CPI_{1} + $\frac{\text{Accesos a Memoria}}{\text{instrucción}}$ · Frecuencia de fallos · Penalización de fallos) · Tiempo de ciclo de reloj
+  Tiempo de CPU = IC · ( CPI$_{ejecucion}$ + $\frac{\text{Accesos a Memoria}}{\text{Instrucción}}$ · Frecuencia de fallos · Penalización de fallos) · Tiempo de ciclo de reloj
 \vspace{15pt}
 \end{adjustwidth}
 
@@ -160,7 +160,7 @@ Información sobre este tipo de ataque: \cite{BackCache}.
 \hline
 \horasEntenderEnunciado{1}{0} \\
 \hline
-\horasMemoria{0}{0} \\
+\horasMemoria{2}{0} \\
 \hline
 \horasVhdl{1}{0} \\
 \hline
