--- a/Memoria/assets/biblio.bib
+++ b/Memoria/assets/biblio.bib
@@ -8,10 +8,17 @@
     month = {March},
 }
 
-@book{HennyPatt},
-    title = {Arquitectura de Computadores \, Un enfoque cuantitativo},
-    author = {John L. Henessy & David A. Patterson}
+@book{HennyPatt,
+    title = {Arquitectura de Computadores \, un enfoque cuantitativo},
+    author = {John L. Hennessy and David A. Patterson},
     publisher = {McGrawHill},
     year = {1993},
 }
 
+@online{RivoireCacheWrite,
+  title = {Cache Write Policies},
+  author = {Rivoire, Steven},
+  year = {1999},
+  url = {https://rivoire.cs.sonoma.edu/cs351/other/cache_write.html},
+  note = {Consultado el 5 de mayo de 2024},
+}
